--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
                 <h3>Gerard Nicolas</h3>
                 <p>Aspiring Frontend Developer</p>
                 <h4>Philippines</h4>
-                <a href="https://www.linkedin.com/in/gerard-nicolas-4287531a0/" style="text-decoration: none"><img src="images/702300.png" alt="linkedin account" style="width:25px;height:25px;" target="_blank">
+                <a href="https://www.linkedin.com/in/gerard-nicolas-4287531a0/" style="text-decoration: none" target="_blank">
+                    <img src="images/702300.png" alt="linkedin account" style="width:25px;height:25px;">
                 </a>
-                <a href="https://www.facebook.com/gerardnicolas.j/" style="text-decoration: none">
-                <img src="images/Facebook_Logo_(2019).png" alt="facebook account" style="width:25px;height:25px;" target="_blank">
+                <a href="https://www.facebook.com/gerardnicolas.j/" style="text-decoration: none" target="_blank">
+                    <img src="images/Facebook_Logo_(2019).png" alt="facebook account" style="width:25px;height:25px;">
                 </a>
             </div>
         </div>
